--- a/XMasCounter/index.html
+++ b/XMasCounter/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Time Until Christmas Eve<</title>
-    <meta charset="UTF-8" />
-  </head>
-  <body>
-    <h1>Time Until Christmas Eve</h1>
-    <h2 class="js-clock">
 
-    </h2>
-    
-    <script src="src/index.js"></script>
-  </body>
+<head>
+  <title>Time Until Christmas</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./src/styles.css">
+</head>
+
+<body>
+
+  <div class="message">
+    <h1><span>Time Until</span> <span>Christmas</span></h1>
+    <h2 class="js-clock"></h2>
+  </div>
+
+  <script src="./src/index.js"></script>
+</body>
+
 </html>
